04-kubernetes/epam-k8s-labs/ingress/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: trouble-1
spec:
  stripPrefix:
    prefixes:
      - /lime
      - /purple
