04-kubernetes/epam-k8s-labs/ingress/maroon-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maroon-color
  namespace: trouble-3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: maroon-color
  template:
    metadata:
      labels:
        app: maroon-color
    spec:
      containers:
      - name: maroon
        image: sbeliakou/color:v1
        ports:
        - containerPort: 80
