04-kubernetes/epam-k8s-labs/ingress/sorry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorry-page-service
  namespace: ingress-default-backend
spec:
  selector:
    app: sorry-page
  ports:
  - port: 80
    targetPort: 80
