04-kubernetes/epam-k8s-labs/ingress/switch.yaml
apiVersion: v1
kind: Service
metadata:
  name: switch
spec:
  selector:
    app: color
  ports:
  - port: 80
    targetPort: 80
