04-kubernetes/epam-k8s-labs/ingress/default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend
  namespace: ingress-default-backend
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sorry-page-service
            port:
              number: 80
