04-kubernetes/epam-k8s-labs/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aqua-ingress
spec:
  rules:
  - host: aqua.k8slab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aqua-svc
            port:
              number: 80
