04-kubernetes/epam-k8s-labs/ingress/olive-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olive-ingress
  namespace: default
spec:
  rules:
  - host: olive.k8slab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: olive-svc
            port:
              number: 80
